Bug 1718066: Add a check against zero r=sefeng

I don't see why this is needed or how we got to this place
but we are getting some divide-by-zero errors and maybe
this will resolve them?

Differential Revision: https://phabricator.services.mozilla.com/D119218